<resources>
    <string name="app_name">My Application</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="userName">用户名：</string>
    <string name="passWord">密码：</string>
    <string name="signIn">登录</string>
    <string name="exit">退出</string>
</resources>
