<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/TableLayout2"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
             android:gravity="center_vertical"
             android:stretchColumns="0,3">

    <TableRow>

        <TextView/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"/>

        <TextView/>
    </TableRow>

    <TableRow>

        <TextView/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passWord"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"/>

        <TextView/>
    </TableRow>

    <TableRow>

        <TextView/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"/>

        <TextView/>
    </TableRow>

</TableLayout>
